# shade

./: .gitattributes  .gitignore  .npmrc  .ptpip-client-guid  2026-03-10-214748-we-have-a-plan-execute-planmd.txt  Cargo.toml  PLAN.md  README.md  README_32BIT_TEXTURES.md  Taskfile.yml  biome.json  mise.toml  package.json  rust-toolchain.toml  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: build.yml  deploy.yml  release.yml
autoresearch/wasm-bench/: blank.html  index.html  run.mjs  server.mjs
ccapi/: Cargo.toml
ccapi/src/: lib.rs
crates/shade-cli/: Cargo.toml
crates/shade-cli/src/: main.rs
crates/shade-core/: Cargo.toml
crates/shade-io/: Cargo.toml
crates/shade-tauri/: Cargo.toml  tauri.conf.json
docs/: SOCKET_IMPLEMENTATION.md  SOCKET_PROTOCOL.md  distributed-file-identification.md  index.md  tauri-channel-and-custom-protocol.md  ui-system.md
example/: example_client.py
example/ui/: index.html  package.json
scripts/: benchmark-web-gpu-memory-crop-viewport.sh  benchmark-web-gpu-memory.sh  build-wasm-dev.sh  build-wasm.sh  fuzzing-instrumentation.md  fuzzing-protocol.md
shade-cli/: Cargo.toml
shade-cli/src/: main.rs
shade-cli/tests/: cli_precision.rs  mask_gradient.rs  snapshot_adjustments.rs
shade-core/: Cargo.toml
shade-core/shaders/: color_transform.wgsl  crop.wgsl  denoise_guide_h.wgsl  glow.wgsl  ls_curve.wgsl  sharpen_h.wgsl
shade-core/src/: context.rs  lib.rs  pipeline.rs  pipelines.rs  profiler.rs  renderer.rs  sharpen2.rs  texture_cache.rs
shade-core/tests/: crop_rotation_e2e.rs
shade-gpu/: Cargo.toml
shade-gpu/shaders/: curves.wgsl  denoise_bilateral_h.wgsl  denoise_bilateral_v.wgsl  denoise_guide_v.wgsl  glow.wgsl  grain.wgsl  sharpen_h.wgsl  sharpen_v.wgsl  tone.wgsl  vignette.wgsl
shade-gpu/src/: basic_adjust.rs  color_transform.rs  composite.rs  context.rs  denoise.rs  lib.rs  pipeline.rs  pipelines.rs  renderer.rs  sharpen2.rs  texture_cache.rs  timestamp.rs
shade-gpu/tests/: crop_rotation_e2e.rs
shade-gpui/: Cargo.toml
shade-gpui/src/: main.rs
shade-io/: Cargo.toml
shade-io/benches/: organic_preview.rs
shade-io/src/: app_config.rs  camera_services.rs  ccapi.rs  collections.rs  file_fingerprint.rs  file_fingerprint_cache.rs  file_fingerprint_io.rs  image_loader.rs  lib.rs  library_index.rs  library_scan_service.rs  library_source.rs  thumbnail_cache.rs  thumbnail_loader.rs  thumbnail_queue.rs  video_decoder.rs  video_encoder.rs
shade-lib/: Cargo.toml
shade-lib/benches/: organic_gpu.rs
shade-lib/shaders/: color.wgsl  color_transform.wgsl  composite.wgsl  curves.wgsl  denoise_bilateral_h.wgsl  denoise_bilateral_v.wgsl  denoise_nlm.wgsl  hsl_adjust.wgsl  sharpen.wgsl  sharpen_v.wgsl  text_glyph.wgsl  tone.wgsl
shade-lib/src/: color.rs  color_transform.rs  composite.rs  context.rs  denoise.rs  lib.rs  pipeline.rs  pipelines.rs  renderer.rs  sharpen2.rs  text.rs  text_buffer.rs  text_layout.rs  text_outline.rs  text_pipeline.rs  texture_cache.rs
shade-lib/tests/: adjustments_snapshots.rs  crop_rotation_e2e.rs  text_layer_e2e.rs
shade-p2p/: Cargo.toml
shade-p2p/src/: lib.rs
shade-tagging/: Cargo.toml
shade-tagging/examples/: siglip2.rs  siglip2_auto_tags.rs  siglip2_bench.rs  siglip2_bench_vocab.rs  siglip2_calibrate_thumbnails.rs  siglip2_inspect.rs  siglip2_mine_thumbnail_vocab.rs  siglip2_photo_search.rs  siglip2_scores.rs  siglip2_vocab.rs
shade-tagging/src/: lib.rs  photo_search.rs
shade-tauri/: Cargo.toml  build.rs  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
shade-tauri/.cargo/: config.toml
shade-tauri/capabilities/: default.json
shade-tauri/icons/: icon.icns
shade-tauri/scripts/: cargo-tauri.sh
shade-tauri/src/: batch.rs  camera_discovery.rs  channel_protocol.rs  channel_server.rs  collections.rs  commands.rs  config.rs  db.rs  dispatch.rs  edit_apply.rs  editor_state.rs  image_loaders.rs  layers.rs  lib.rs  main.rs  masks.rs  media_libraries.rs  media_metadata.rs  open_image.rs  paths.rs  peers.rs  photos.rs  presets.rs  preview_channel.rs  preview_scheduler.rs  remote_control.rs  render.rs  s3_scan.rs  shade_uri.rs  snapshots.rs  sync.rs  tagging_worker.rs  text_layers.rs  thumbnail_cache.rs
shade-tauri/tools/cargo-tauri-wrapper/: Cargo.toml
shade-tauri/tools/cargo-tauri-wrapper/src/: main.rs
shade-tauri/ui-src/: main.css  main.tsx  platform.ts  remote-control.ts  tauri-collections-platform.ts  tauri-host-hooks.ts  tauri-library-cache.ts  tauri-platform.ts  tauri-thumbnail-backend.ts  tauri-transport.ts
shade-ui/: index.html  package.json  vite.config.ts
shade-ui/docs/: ui-system.md
shade-ui/locales/: de.json
shade-ui/src/: App.tsx  browser-media-library.ts  browser-presets.ts  browser-snapshots.ts  cache-utils.ts  camera-library-cache.ts  crop-aspect.ts  index.css  index.tsx  keybinds.json  local-library-cache.ts  locales.ts  media-file-accept.ts  peer-library-cache.ts  theme.css  utils.ts
shade-ui/test/: actions.test.ts  use-open-image-preview.test.ts
shade-video/: Cargo.toml
shade-video/src/: decoder.rs  encoder.rs  lib.rs
shade-viewport/: package.json
shade-wasm/: Cargo.toml  package.json
shade-wasm/src/: bridge.rs  engine.rs  lib.rs
shade-wasm/web/: index.ts  indexed-db.ts  shade.worker.ts
shade-wasm/web/worker/: collections.ts  index.ts  presets.ts  ratings.ts  snapshots.ts
shade-web/: index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1774558795081-012de9f903a98.mjs
shaders/: basic_adjust.wgsl  brush_stamp.wgsl  color.wgsl  color_transform.wgsl  composite.wgsl  crop.wgsl  curves.wgsl  denoise_bilateral_h.wgsl  denoise_bilateral_v.wgsl  denoise_guide_h.wgsl  denoise_nlm.wgsl  grain.wgsl  hsl_adjust.wgsl  sharpen.wgsl  sharpen_h.wgsl  sharpen_v.wgsl  tone.wgsl  vignette.wgsl
src/: cache.rs  cli.rs  config.rs  file_loaders.rs  index.ts  main.rs  protocol.rs  server.rs  shade.rs  shader.wgsl  socket.rs  utils.rs  web_shader.wgsl
ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
website/: astro.config.mjs  package.json  vercel.json
(+285 files in other folders)
