[workspace]
members = ["shade-core", "shade-gpu", "shade-io", "shade-cli", "shade-p2p", "shade-tauri", "shade-wasm"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "23", features = ["wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
image = { version = "0.25", features = ["jpeg", "png", "tiff", "webp"] }
exr = "1.74"
rawler = { git = "https://github.com/tokyoapp/dnglab", rev = "be0ff30c8bc8f097ae93b057deb90074c0f041ab" }
half = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
