[workspace]
members = ["ccapi", "shade-core", "shade-gpu", "shade-io", "shade-cli", "shade-video", "shade-p2p", "shade-tauri", "shade-wasm"]
resolver = "2"

[workspace.dependencies]
wgpu = { version = "23", features = ["wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
image = { version = "0.25", features = ["jpeg", "png", "tiff", "webp"] }
exr = "1.74"
rawler = { git = "https://github.com/libshade/dnglab", rev = "6818dd8cc8c5c4990c5ce91b35b3c17268a3cf68" }
half = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
