[package]
name = "ccapi"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.20"
anyhow = "1.0.75"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
serde_json = "1"
