[package]
name = "shade-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shade-cli"
path = "src/main.rs"

[features]
# Enable the `shade video` subcommand. Requires system FFmpeg.
video = ["shade-io/ffmpeg"]

[dependencies]
shade-lib = { path = "../shade-lib" }
shade-io = { path = "../shade-io" }
shade-p2p = { path = "../shade-p2p" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
image = { workspace = true }
exr = { workspace = true }
tempfile = "3"
