[package]
name = "shade-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
shade-core = { path = "../shade-core" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
half = { workspace = true }
futures-channel = "0.3"

[dev-dependencies]
shade-io = { path = "../shade-io" }
image = { workspace = true }
tokio = { workspace = true }
