[package]
name = "shade-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
shade-lib = { path = "../shade-lib" }
shade-io = { path = "../shade-io" }
image = { workspace = true }
rfd = "0.15"
smallvec = "1"
pollster = "0.4"
futures-channel = "0.3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "shade-gpui"
path = "src/main.rs"
