[package]
name = "shade-io"
version = "0.1.0"
edition = "2021"

[features]
ffmpeg = ["dep:video-rs", "dep:ndarray"]

[dependencies]
shade-core = { path = "../shade-core" }
image = { workspace = true }
exr = { workspace = true }
anyhow = { workspace = true }
rawler = { workspace = true }
kamadak-exif = "0.6"
libsql = "0.6"
serde = { workspace = true }
tokio = { workspace = true }
blake3 = "1"
video-rs = { version = "0.10", features = ["ndarray"], optional = true }
ndarray = { version = "0.16.1", optional = true }
