[package]
name = "shade-io"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = [
    "dep:chrono",
    "dep:hex",
    "dep:libsql",
    "dep:notify",
    "dep:percent-encoding",
    "dep:quick-xml",
    "dep:reqwest",
    "dep:sha2",
    "dep:tokio",
]
ffmpeg = ["dep:video-rs", "dep:ndarray"]

[dependencies]
shade-core = { path = "../shade-core" }
image = { workspace = true }
exr = { workspace = true }
anyhow = { workspace = true }
rawler = { workspace = true }
kamadak-exif = "0.6"
libsql = { version = "0.6", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
blake3 = "1"
notify = { version = "6", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
hex = { version = "0.4", optional = true }
percent-encoding = { version = "2.3", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"], optional = true }
sha2 = { version = "0.10", optional = true }
video-rs = { version = "0.10", features = ["ndarray"], optional = true }
ndarray = { version = "0.16.1", optional = true }
