[package]
name = "shade-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
half = { workspace = true }
base64 = "0.22"
futures-channel = "0.3"

[dev-dependencies]
shade-io = { path = "../shade-io" }
image = { workspace = true }
tokio = { workspace = true }
