[package]
name = "shade-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }
iroh-blobs = "0.98.0"
iroh-tickets = "0.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
