[package]
name = "shade-tagging"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
ort = { version = "2.0.0-rc.9", features = ["download-binaries", "copy-dylibs", "ndarray", "cuda", "coreml"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
