[package]
name = "shade-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
shade-core = { path = "../shade-core" }
shade-gpu = { path = "../shade-gpu" }
shade-io = { path = "../shade-io" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[lib]
name = "shade_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shade-tauri"
path = "src/main.rs"
