[package]
name = "shade-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
blake3 = "1"
crossbeam-channel = "0.5"
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }
shade-core = { path = "../shade-core" }
shade-gpu = { path = "../shade-gpu" }
shade-io = { path = "../shade-io" }
shade-p2p = { path = "../shade-p2p" }
image = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[lib]
name = "shade_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shade-tauri"
path = "src/main.rs"
