[package]
name = "shade-video"
version = "0.1.0"
edition = "2021"

[features]
# Enable this feature when system FFmpeg (libavcodec, libavformat, libavutil,
# libswscale) is installed. Without it the crate still compiles but
# VideoDecoder / VideoEncoder are unavailable.
ffmpeg = ["dep:video-rs"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

# video-rs wraps ffmpeg-sys-next and provides a clean frame-by-frame API for
# decoding and encoding video. Requires system FFmpeg.
video-rs = { version = "0.10", features = ["ndarray"], optional = true }
