[package]
name = "shade-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Navigator",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "OffscreenCanvas",
    "ImageData",
    "Blob",
    "Url",
] }
shade-core = { path = "../shade-core" }
shade-gpu = { path = "../shade-gpu" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
wgpu = { version = "23", features = ["wgsl", "webgpu"] }
anyhow = "1"
image = { workspace = true }
base64 = "0.22"
shade-io = { path = "../shade-io" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
